welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:7: error: not found: value i
  while( i <  nums.length) {
         ^averageValue:9: error: not found: value i
     	     s = s + ( nums(i)/nums.length );
                            ^averageValue:10: error: not found: value i
                 i=i+1;
                 ^